Uploading Grandma's Recipes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 </span>
             </div>
         </div>
-        <div class="grandma"><img src=" images/logo.png " alt=img1 title=" logo " width="250px" style="vertical-align: middle;">
-            <h1> Grandma's Recipes Inspiration<img src="images/grm.png " alt=img1 title=" logo " width="70px " style="vertical-align:middle"> </h1>
+        <div class="grandma">
+            <img src=" images/logo.png " alt=img1 title=" logo " width="250px">
+            <!-- <img src="images/grm.png " alt=img1 title=" logo " width="70px " style="float:right"> -->
+            <h1> Grandma's Recipes Inspiration </h1>
             <p style="text-align: center "> <em>Whether you're after an old favourite or inspiration for something new, we have the perfect recipe.</em>
             </p><br/>
         </div>
@@ -91,7 +93,7 @@
         <br/>
     </main>
     <footer>
-        <br/><br/><img src="images/end.png " alt="img " title="pepper " width=200px style="position: fixed;" class="center" />
+        <br/><br/><img src="images/end.png " alt="img " title="pepper " width=200px style="position: fixed; " class="center " />
     </footer>
 </body>
 
