--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         </div>
         <div class="grandma">
             <img src=" images/logo.png " alt=img1 title=" logo " width="250px">
+
             <!-- <img src="images/grm.png " alt=img1 title=" logo " width="70px " style="float:right"> -->
             <h1> Grandma's Recipes Inspiration </h1>
+
             <p style="text-align: center "> <em>Whether you're after an old favourite or inspiration for something new, we have the perfect recipe.</em>
             </p><br/>
         </div>
@@ -41,13 +43,13 @@
         <ul>
 
             <li style="display: inline; ">
-                <a href="http://127.0.0.1:5501/recipe-1.html ">Salads</a>
+                <a href="recipe-1.html ">Salads</a>
             </li>
             <li style="display: inline; padding-left: 20px; padding-right: 20px; ">
-                <a href="pages/recipe_2.html ">Meat</a>
+                <a href="recipe_2.html ">Meat</a>
             </li>
             <li style="display: inline; ">
-                <a href="http://127.0.0.1:5501/recipe-1.html ">Cheese</a>
+                <a href="recipe-1.html ">Cheese</a>
             </li>
         </ul><br/>
     </nav>
@@ -63,27 +65,27 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="http://127.0.0.1:5501/recipe-1.html ">Perfection Salad</a></td>
+                        <a href="recipe-1.html ">Perfection Salad</a></td>
                     <td>120</td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://127.0.0.1:5501/recipe-2.html ">Cherry Pineapple Bologna</a></td>
+                        <a href="recipe-2.html ">Cherry Pineapple Bologna</a></td>
                     <td>300</td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://127.0.0.1:5501/recipe-3.html ">Hamburger Pie</a></td>
+                        <a href="recipe-3.html ">Hamburger Pie</a></td>
                     <td>550</td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://127.0.0.1:5501/recipe-4.html ">Cheesy Bread Sticks</a></td>
+                        <a href="recipe-4.html ">Cheesy Bread Sticks</a></td>
                     <td>500</td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://127.0.0.1:5501/recipe-5.html ">Veal a la Royale</a></td>
+                        <a href="recipe-5.html ">Veal a la Royale</a></td>
                     <td>430</td>
                 </tr>
 
