--- a/recipe-2.html
+++ b/recipe-2.html
@@ -53,7 +53,7 @@
         </p>
     </ol>
     <footer>
-        <button><a href="http://127.0.0.1:5501/index.html?">Go back</a></button>
+        <button><a href="index.html?">Go back</a></button>
     </footer>
 </body>
 
