Adding Profile Pages

--- a/pages/login.html
+++ b/pages/login.html
@@ -116,7 +116,7 @@
                     </div>
                 </form>
             </div><br/><br/>
-            <a style="color:whitesmoke; " href="">Forgot Password?</a>
+            <a style="color:#414042; " href="">Forgot Password?</a>
         </div>
     </main>
     <footer>
