--- a/pages/registration.html
+++ b/pages/registration.html
@@ -132,7 +132,7 @@
 
             </form>
         </div><br/>
-        <p style="color:whitesmoke ">Already have an account? Log In</p>
+        <p style="color:#414042 ">Already have an account? Log In</p>
     </div>
     <footer>
         <div class="footer-registration">
