--- a/sweet-bootstrap/pages/about.html
+++ b/sweet-bootstrap/pages/about.html
@@ -5,27 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+    <!--BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--BOOTSTRAP-->
+
+
+    <!--FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!--FONTS-->
+
     <title>About us</title>
 </head>
 
 <body>
-    <nav class="container-fluid navbar navbar-expand-lg fixed-top navbar-light">
+    <!--FIRST NAVIGATION BAR-->
+    <nav class="container-fluid navbar navbar-expand-lg first-navbar w-100 border-0 mb-0">
         <div class="container">
-            <a class="navbar-brand d-lg-none" href="index.html">Love & Cook</a>
+            <a class="navbar-brand d-lg-none" href="index.html"><img class="ms-5" style="width:8em" src="../images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse lovenavbar" id="navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+            <div class=" navbar-collapse w-100 h-auto d-flex justify-content-between " id="navbarNavDropdown">
+
                 <!--NAVBAR NAVIGATION LEFT-->
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link active text-white" aria-current="page" href="#">About us</a>
+                        <a class="nav-link active text-white" aria-current="page" href="pages/about.html">About us</a>
                     </li>
 
                     <li class="nav-item dropdown ">
@@ -39,71 +49,79 @@
                 </ul>
 
                 <!--NAVBAR NAVIGATION CENTER-->
-                <a class="navbar-brand  logo-title" href="#"><img class="ms-5" style="width:8em" src="../images/logo.png"> </a>
+                <a class="navbar-brand h-auto d-flex align-self-center" href="#"><img class="ms-5" style="width:28em" src="../images/logo.png"> </a>
 
                 <!--NAVBAR NAVIGATION RIGHT-->
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active text-white" href="#">Gallery</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link active text-white" href="#">Contact</a>
                     </li>
-
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container">
+
+    <div class="container-fluid">
 
         <div class="row mt-5 d-flex align-items-center aboutpage">
-            <div class="col-sm-12 col-md-6 col-lg-4 img-about">
-                <img src="../images/about.jpg" class="rounded img-fluid" />
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-8 p-5">
-                <h2 class="display-6 mb-5">About us</h2>
-                <p>Welcome to our little page Sweet fans and newcomers!</p>
-                <p>We are really proud to say that Sweet serves the best cakes ever! Our menu may be on the smaller side, but every item that makes the menu is sure to be awesome!</p>
+
+            <div class="col-sm-12 col-md-6 col-lg-8 about-text bg-dark text-light p-3 text-center">
+                <h2 class="display-6 mb-5 ">ABOUT US</h2>
+                <p class="m-0">Welcome to our little page Sweet fans and newcomers!</p>
+                <p class="m-0">We are really proud to say that Sweet serves the best cakes ever! </p>
+                <p class="m-0">Our menu may be on the smaller side, but every item that makes the menu is sure to be awesome!</p>
                 <p>Don't just take our word for it! Check us out on Facebook, Twitter and anywhere else!</p>
-                <ul class="d-flex justify-content-start mt-5 social-about d-grid gap-3 p-0">
+                <ul class="d-flex justify-content-center mt-5 social-about d-grid gap-3 p-0 ">
                     <li>
-                        <a href="https://www.facebook.com/"><img src="../images/facebook.png"></a>
+                        <a href="https://www.facebook.com/ "><img src="../images/facebook-white.png "></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/"><img src="../images/instagram.png"></a>
+                        <a href="https://www.instagram.com/ "><img src="../images/instagram-white.png "></a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com/"><img src="../images/twitter.png"></a>
+                        <a href="https://www.twitter.com/ "><img src="../images/twitter-white.png "></a>
                     </li>
 
 
                 </ul>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-5 d-flex justify-content-end">
+                <img class="position-relative img-about-black" src=" ../images/black.jpg " />
+                <img class=" position-absolute img-about" src="../images/about.jpg " />
+            </div>
         </div>
 
     </div>
 
-    <div class="container-fluid bg-dark text-white">
-        <div class="row ms-5">
-            <div class="col-md-4"><img src="../images/logo.png" alt="logo " title="vogue " style="width:480px " /></div>
+    <!-- <section class="container mb-2 first-section">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(152, 167, 167, 0.422)" fill-opacity="0.9" d="M0,0L1440,320L1440,0L0,0Z"></path></svg>
+        <div class="col-sm-12 col-md-10 col-lg-9 align-items-center ">
+            <figure class="text-end">
+                <blockquote class="blockquote">
+                    <h3 class="text-center " style="font-size: 40px;color: #303030;font-weight: 600;letter-spacing: 4px">MILK</h3>
+                    <p class="blockquotes-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est erat, interdum et ligula nec, bibendum laoreet lectus. Vivamus nec orci eleifend, vestibulum nisi placerat, dictum diam. Mauris finibus placerat turpis id imperdiet.
+                        Aenean eu bibendum nibh. Cras tellus lorem, consequat mollis lacinia sit amet, sodales quis leo. Curabitur efficitur aliquet fringilla. Donec posuere laoreet leo, et venenatis leo dapibus eget. Curabitur iaculis, elit sed eleifend
+                        tempus, libero est aliquam sapien, nec sagittis orci mauris in nulla.</p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    Someone famous in <cite title="Source Title">Source Title</cite>
+                </figcaption>
+            </figure>
         </div>
-        <div class="row ms-5">
-            <div class="col-md-4 mt-5">
-                <p>Cake is childhood, the best and bright moments you wish could have lasted forever. Desserts are the fairy tales of the kitchen—a happily-ever-after to supper.</p>
-            </div>
-            <div class="col-md-2 mt-5 ">
-                <p>More from Sweet</p>
-            </div>
-            <div class="col-md-2 mt-5 ">
-                <p>See more stories</p>
-            </div>
-            <div class="col-md-4"></div>
-        </div>
-        <div class="row ms-3">
-            <div class="col-md-4">
-                <ul class="footer-social-media d-flex gap-3 ">
+
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(152, 167, 167, 0.422)" fill-opacity="0.9" d="M0,0L1440,320L1440,320L0,320Z"></path></svg>
+    </section> -->
+
+    <div class="container-fluid bg-dark text-white footer-nav ">
+        <div class="row ms-5 ">
+            <div class="col-md-4 ">
+                <img src="../images/logo.png " alt="logo " title="vogue " style="width:480px " />
+                <p class="mt-4 ">Cake is childhood, the best and bright moments you wish could have lasted forever. Desserts are the fairy tales of the kitchen — a happily-ever-after to supper.</p>
+                <ul class="footer-social-media d-flex mt-4 gap-3 p-0 ">
                     <li>
                         <a class="social-media " href="#https://www.facebook.com "><img src="../images/facebook-white.png " alt="img " title="Facebook " style="width: 26px " /></a>
                     </li>
@@ -118,7 +136,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-5 ">
+                <p class="p-4 ">MORE FROM SWEET</p>
                 <ul class="footer-account ">
                     <li>
                         <a class="text-light " href="#news ">Newsletter</a>
@@ -134,30 +153,35 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-2">
-                <ul class="footer-buttons-clwss ">
+            <div class="col-md-2 mt-5 ">
+                <p class="p-4 ">SEE MORE STORIES</p>
+                <ul class="footer-buttons ">
                     <li>
                         <a class="text-light " href=" #culture ">Recipes</a>
                     </li>
                     <li>
-                        <a class="text-light" href="#living ">Goodies</a>
+                        <a class="text-light " href="#living ">Goodies</a>
                     </li>
                     <li>
-                        <a class="text-light" href=" #wellness ">Online Shop</a>
+                        <a class="text-light " href=" #wellness ">Online Shop</a>
                     </li>
                     <li>
-                        <a class="text-light" href=" #skin ">Cake Shop</a>
+                        <a class="text-light " href=" #skin ">Cake Shop</a>
                     </li>
                     <li>
-                        <a class="text-light mt-5" href=" #shopping ">Gallery</a>
+                        <a class="text-light " href=" #shopping ">Gallery</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-md-4 "></div>
+            <div class="col-md-4 d-flex justify-content-end ">
+                <img src="../images/caramel.png " alt="logo " title="sweet " style="width:300px " />
+            </div>
         </div>
-
     </div>
 
+    </div>
+    <script src="../javascript/style.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </body>
 
 </html>
